pass the library registry to the server
but this is not all yet